Fix #43